--- a/Makefile_pdflatex
+++ b/Makefile_pdflatex
@@ -44,8 +44,8 @@ version		:= 2.2.0
 -include $(HOME)/.latex-makefile/Variables.ini
 #
 # This can be pdflatex or latex - you can change this by adding the following line to your Makefile.ini:
- BUILD_STRATEGY := latex
-#BUILD_STRATEGY		?= pdflatex
+# BUILD_STRATEGY := latex
+BUILD_STRATEGY		?= pdflatex
 #
 # Sets LC_ALL=C, by default, so that the locale-aware tools, like sort, be
 # # immune to changes to the locale in the user environment.
