updated the workflow

--- a/example.cfg
+++ b/example.cfg
@@ -1,10 +1,14 @@
 [general]
-kindleaddress=foo@kindle.com
-logpath=~/kindle.log
+device=Kindle DX
 
-[email]
-username=example@example.com
-server=smtp.gmail.com
-port=465
-mode=SSL
+[directory]
+installDir=~/mercurial/kindlize/
+tmpDir=~/tmp/
+dropDir=~/Dropbox/kindle_sync/
+incomingDir=/media/Kindle/documents/Incoming/
+
+[LaTeX]
+font=charter
+fontheight=14pt
+fontwidth=18pt
 
