repackaged the data package

--- a/example.cfg
+++ b/example.cfg
@@ -2,7 +2,6 @@
 device=Kindle DX
 
 [directory]
-installDir=~/mercurial/kindlize/
 tmpDir=~/tmp/
 dropDir=~/Dropbox/kindle_sync/
 incomingDir=/media/Kindle/documents/Incoming/
@@ -12,3 +11,5 @@ font=charter
 fontheight=14pt
 fontwidth=18pt
 
+[pdf]
+pdfviewer=mupdf
