--- a/example.cfg
+++ b/example.cfg
@@ -4,6 +4,7 @@ device=Kindle DX
 [directory]
 tmpDir=~/tmp/
 dropDir=~/Dropbox/kindle_sync/
+mountDir=/media/Kindle/
 incomingDir=/media/Kindle/documents/Incoming/
 
 [LaTeX]
